@@ -1,3 +1,7 @@
+2002-11-25  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
+
+	* include/inttypes.h: make -mint8 aware.
+
 2002-11-24  Joerg Wunsch <j.gnu@uriah.heep.sax.de>
 
 	* Makefile.am: enable libprintf_flt.a.
